replace all guava list operations with stream operations